--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "quiz-game",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
+  "devDependencies": {
     "@types/jest": "24.0.23",
     "@types/node": "12.12.11",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "^5.1.2",
-    "@types/styled-components": "^4.4.0",
+    "@types/styled-components": "^4.4.0"
+  },
+  "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
