--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "quiz-game",
   "version": "0.1.0",
+  "homepage": "https://aidankmcl.github.io/who-wants-to-be-a-millionaire",
   "private": true,
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -10,7 +11,8 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "^5.1.2",
-    "@types/styled-components": "^4.4.0"
+    "@types/styled-components": "^4.4.0",
+    "gh-pages": "^2.1.1"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -23,6 +25,8 @@
     "typescript": "3.7.2"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
