--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "gh-pages": "^2.1.1"
   },
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.21.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^4.0.3",
     "styled-components": "^4.4.1",
     "typesafe-actions": "^5.1.0",
     "typescript": "3.7.2"
